2006-01-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: added Gnomolicious

2006-01-18  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/cairo-pygtk-widget-signals-es
	* articles/cairo-pygtk-widget-signals-es/cairo-pygtk-widget-signals.html
	* articles/cairo-pygtk-widget-signals-es/ejemplo_1.py
	* articles/cairo-pygtk-widget-signals-es/ejemplo_2.py
	* articles/cairo-pygtk-widget-signals-es/ejemplo_3.py
	* articles/cairo-pygtk-widget-signals-es/window_1.py
	* articles/cairo-pygtk-widget-signals-es/window_2.py
	* articles/cairo-pygtk-widget-signals-es/window_3.py
	* articles.src: New article by Alberto Ruiz

2006-01-13  Johan Dahlin  <jdahlin@async.com.br>

	* articles/cairo-pygtk-widgets/cairo-pygtk-widgets.htm: Fix links.

2006-01-11  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): 2.8.4

2006-01-09  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): PyGObject 2.9.0

2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: use temporal mirror for tigrux's tutorial

2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: added EveryGUI

2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: fixed typo in Gnome-schedule URL

2006-01-03  Johan Dahlin  <jdahlin@async.com.br>

	* applications.src: Add TorApplet

	* articles.src: Update URL for Dimitri Paters tutorial.

2006-01-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Gnome-schedule

2006-01-02  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* newsitems.py: Announce new docs.

	* Makefile (LOCAL_TARBALLS),
	* documentation/pygnomevfs.tar.bz2,
	* reference.src:  Add pygnomevfs docs, by David Trowbridge.

2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * people.src: Added myself to the list :)
	* MAINTAINERS: Added file with a list of latest commiters
	
2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
