@@ -1,3 +1,8 @@
+2006-01-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* newsitems.py: added Alberto Ruiz's article and fix date typo
+	in previous entry.
+
 2006-01-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: added Gnomolicious
